--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:               My digital garden
+title:               Vegard's Notes
 include:             ['_pages']
-exclude:             ['_includes/notes_graph.json']
+exclude:             ['_includes/notes_graph.json', 'markdown', 'formatted', 'json', 'LICENSE', 'default.nix']
 # You may need to change the base URL depending on your deploy configuration.
 # Specifically, when using GitHub Pages, the baseurl should point to where GitHub
 # Pages deploys your repository (which is usually the repository name).
